...
                </View>
                <ScrollView
                  keyboardShouldPersistTaps='handled'
                  contentContainerStyle={{flexGrow: 1}}>
                    <View testID={this.props.testID} style={styles.modal}>
                      <TextInput
                          testID="title_input"
                          style={styles.modalTextInput}
                          placeholder="Title"
                          onChangeText={(text) => this.setState({title: text})}/>
                      <GoogleAutoComplete apiKey={API_KEY} debounce={500} minLength={4} components={"country:ca"}>
                          {({ handleTextChange, locationResults, fetchDetails, isSearching, clearSearchs }) => (
                              <React.Fragment>
                              {this.setState()}
                                  <TextInput ref='addressTextInput'
                                      testID="address_input"
                                      value={this.state.addressField}
                                      style={styles.modalTextInput}
                                      placeholder="Address"
                                      onChangeText={(text) => this.handleAddressChange(text, handleTextChange)}/>
                                  {isSearching && <ActivityIndicator/>}

                                  { this.state.scrollViewVisible == true &&
                                  <ScrollView
                                      testID="address_scrollview"
                                      style={styles.scrollView}>
                                      {locationResults.map(element => (
                                          <LocationItem
                                          testID={"location_item"}
                                          setNewListingAddress={this.setNewListingAddress}
                                          {...element}
                                          key={element.id}
                                          fetchDetails={fetchDetails}
                                          clearSearchs={clearSearchs}
                                          />
...
                              data={numberOfRooms}
                              onChangeText={(text) => this.setState({bath: parseInt(text)})}
                              />
                          </View>
                          <View>
                              <TextInputMask
                                  testID="price_input"
                                  keyboardType='numeric'
                                  style={styles.priceTextInput}
                                  placeholder="$/month"
                                  mask={"$[99990]"}
                                  onChangeText={(text) => this.setState({price: parseInt(text.split('$')[1])})}/>
                          </View>
...
                      </View>
                      <View style={styles.row}>
                        <Text>{length} photos chosen.</Text>
                      </View>
                  </View>
                </ScrollView>
                <Button title='Add Listing' testID="create_listing_button" color='#BA55D3' style={styles.modalButton} onPress={() => { this.handleAddingNewListing()}}/>
                <Button title='Cancel' color='#8A2BE2' style={styles.modalButton} onPress={() => { this.setModalVisible(false); } }/>
            </Modal>
        );
    }
}

...
