...
const itemHorizontalMargin = wp(2);
const sliderWidth = viewportWidth;
const itemWidth = slideWidth + itemHorizontalMargin * 2;

export default class Profile extends React.Component {
    static navigationOptions = {
        tabBarTestID: 'profile_tab',
        tabBarIcon: tabBarIcon('md-person'),
    };

    _renderItem({item, index}) {
      const url ={ uri: DB_URL + item.path.replace(/\\/g, "/")};
      return (
...
      const item = this.state.oldPhoto;
      if(item != null){
        console.log("this is oldPhoto data:" + item);
      }
      const {newPhoto} = this.state;
        return (
            <ScrollView style={styles.scrollView} testID="profile_screen">
            <NavigationEvents
              onWillFocus={payload => {
                console.log("will focus", payload);
                this.onTabPressed();
              }}
            />
...
                <View style={styles.loading}>
                  <Text>Loading...</Text>
                </View>
              </Modal>
              <View style={styles.column}>
                <Button style={styles.buttons} color='#BA55D3' title="Edit" onPress={() => this.editFields(true)}/>
                <Button testID="logout_button" style={styles.buttons} color='#8A2BE2' title="Logout" onPress={() => this.handleLogOut()}/>
              </View>
              <View style={styles.container}>
                <View style={styles.profilePic}>
                  {item != null && (<Carousel
                        ref={(c) => { this._carousel = c; }}
                        data={Array.from(item)}
...
